<resources>
    <string name="app_name">X-Services Beta</string>
    <string name="textbuat">Buat Pesanan</string>
    <string name="textcek">Cek Pesanan</string>
    <string name="name">Nama</string>
    <string name="description">Deskripsi</string>
    <string name="tampil_list">Tampilan List</string>
    <string name="tampil_grid">Tampilan Grid</string>
    <string name="tampil_card_view">Tampilan Cardview</string>
    <string name="textakun">Akun</string>
    <string name="textinfo">Tentang</string>
    <string name="title">Nama</string>
    <string name="category">Jenis Kelamin</string>
    <string name="agama">Agama</string>
    <string name="date">Tanggal</string>
    <string name="submit">OK</string>
    <string name="makan">Pekerjaan</string>
    <string name="minum">Alamat</string>
    <string name="fajar">Fajar Al Rasyid</string>
    <string name="tambah">Simpan</string>
    <string-array name="data_name">
        <item>Bayar Biaya Konsultasi Medis Online di KlikDokter Bisa Pakai Uang Digital Dana</item>
        <item>Cara Daftar IMEI Ponsel yang Dibeli dari Luar Negeri agar Terdaftar di Kemenperin</item>
        <item>Pengguna Layanan OTT di Indonesia Capai 66 Juta Orang</item>
        <item>Microsoft Teams Tak Lagi Berfungsi di Internet Explorer 11</item>

    </string-array>
    <string-array name="data_description">
 <item>TRIBUNNEWS.COM, JAKARTA – Pandemi Covid-19 menyebabkan banyak masyarakat yang beralih memanfaatkan layanan kesehatan seperti konsultasi dengan dokter melalui platform online.
Tren ini antara lain terjadi di platform aplikasi kesehatan KlikDokter. Untuk mempermudah layanan konsultasi kesehatan via digital ini, KlikDokter menggandeng dompet digital Dana untuk menjadi mitra pembayaran resmi.
Direktur Utama KlikDokter Dino Bramanto dalam keterangan pers Senin (30/11/2020) mengungkapkan, KlikDokter melihat meningkatnya tren masyarakat dalam memanfaatkan platform konsultasi kesehatan onlineuntuk membangun kerja sama dengan unit usaha lokal lainnya.
"Kami memutuskan berkolaborasi dengan Dana dan niat inipun disambut positif,” ungkapnya.
Lewat kolaborasi ini, pengguna KlikDokter dan Dana yang ingin melakukan konsultasi kesehatan virtual dapat melakukan pembayaran lewat saldo Dana yang dimiliki. Selain praktis, layanan transaksi digital ini juga meminimalisir  kontak fisik.
Mia Argianti, Head of B2B KlikDokter mengatakan, kerja sama ini diharapkan dapat mempermudah pengguna KlikDokter agar dapat melakukan konsultasi kesehatan di platform kami dimanapun dan kapanpun juga dengan metode bayar lebih mudah.
Kehadiran dua layanan yang saling terintegrasi ini diharapkan dapat menjadi solusi digital yang mampu menjawab kebutuhan masyarakat.
Vince Iswara, CEO dan Co-Founder Dana mengatakan, fenomena pandemi Covid-19 telah mengubah kebiasaan masyarakat dalam mengadopsi teknologi dan memanfaatkan transaksi digital.
Karena itu, Dana hadir memberikan kemudahan lewat berbagai fitur dan mini program yang erat kaitannya dengan pemulihan ekonomi maupun informasi seputar pandemi.
"Kolaborasi dengan KlikDokter ikut menyempurnakan upaya kami dalam membangun infrastruktur digital sehat dan berbasis lokal," ujarnya.
Pihaknya berharap kolaborasi ini dapat dimanfaatkan sebaik mungkin oleh masyarakat dan membuka optimisme baru untuk terwujudnya Indonesia lebih sehat dan maju sekaligus memperkuat sektor kesehatan dan juga perekonomian Indonesia.
"KlikDokter akan tetap terus mendukung pemerintah dalam bidang kesehatan dan berharap dapat terus memperoleh kesempatan untuk dapat berkolaborasi secara luas dengan berbagai bidang,” imbuh Dino Bramanto.
Artikel ini telah tayang di Tribunnews.com dengan judul Bayar Biaya Konsultasi Medis Online di KlikDokter Bisa Pakai Uang Digital Dana,
Editor: Choirul Arifin</item>
        <item>TRIBUNNEWS.COM - Berikut cara daftar nomor IMEI ponsel atau HP yang dibeli dari luar negeri.
Pendaftaran IMEI ini bertujuan agar ponsel terdaftar di laman Kementerian Perindustrian Republik Indonesia (Kemenperin) dan bisa menggunakan jaringan seluler yang ada di Indonesia.
Diketahui, pemerintah telah melakukan pemblokiran HP black market (BM) melalui identifikasi nomor IMEI pada Selasa (15/9/2020).
Artinya, ponsel tidak resmi dengan IMEI tidak terdaftar di Kemenperin secara otomatis tidak akan terhubung jaringan seluler.
Untuk cek nomor IMEI terdaftar di Kementerian Perindustrian, Anda dapat mengakses imei.kemenperin.go.id.
Artikel ini telah tayang di Tribunnews.com dengan judul Cara Daftar IMEI Ponsel yang Dibeli dari Luar Negeri agar Terdaftar di Kemenperin, https://
Penulis: Arif Fajar Nasucha
Editor: Pravitri Retno Widyastuti</item>
        <item>TRIBUNNEWS.COM, JAKARTA - Indonesia menduduki peringkat pertama terbanyak menggunakan layanan Over-The-Top (OTT), platform untuk menonton video profesional melalui internet.
Dalam sebulan, orang Indonesia menggunakan tiga miliar jam OTT yang merupakan tertinggi di wilayah Asia Tenggara.
"Sekitar 66 juta orang Indonesia telah menggunakan OTT," kata Jennie Johnson selaku Senior Director Marketing – SEA, AU, dan NZ, The TradeDesk dalam keterangannya, Sabtu (27/11/2020).
The Trade Desk mengandeng Kantar untuk melakukan mensurvei 4.500 konsumen di Indonesia, Filipina, Singapura, Malaysia, Thailand dan Vietnam.
Baca juga: Kurangi Kesenjangan, Publik Butuh Akses Internet Berkualitas dan Terjangkau
OTT adalah jenis streaming video, seperti Youtube, Vidio, Viu, dan iflix, yang bisa berbayar, langganan atau gratis yang diberikan kepada konsumen yang didukung oleh iklan.
Dari jumlah itu sebanyak 70 persen penonton OTT di Indonesia menonton lebih 1 jam per hari.
Di Indonesia, perempuan khususnya sangat aktif di OTT.
"Mayoritas penonton OTT di Indonesia adalah perempuan yakni 57 persen dan dari jumlah itu, 68% pengguna menonton lebih dari 4 jam per hari," katanya.
Artikel ini telah tayang di Tribunnews.com dengan judul Pengguna Layanan OTT di Indonesia Capai 66 Juta Orang
Penulis: Eko Sutriyanto
Editor: Willem Jonata</item>
        <item>Jakarta - Salah satu aplikasi meeting online populer buatan Microsoft yakni Teams, akan dihentikan dukungannya di browser Internet Explorer 11.
Hal tersebut sudah diumumkan sebelumnya pada pertengahan tahun ini di mana browser legendaris ini memang dijadwalkan resmi pensiun tahun depan. Walau demikian, pengguna IE 11 diperkirakan masih jutaan.
Mengingat masih banyak website dan aplikasi yang menggunakan Internet Explorer, Microsoft akan mematikan browsernya ini secara bertahap salah satunya dengan Microsoft Teams.
Mulai tanggal 30 November, Microsoft sudah menghentikan sepenuhnya layanan Microsoft Teams di Internet Explorer 11. Pengguna pun akan dialihkan ke Microsoft Edge untuk tetap dapat mengakses Teams di browser.
Selain itu juga dijadwalkan semua layanan dan aplikasi Microsoft 365 akan dihentikan dukungannya untuk Internet Explorer 11 mulai tahun depan hingga akhirnya resmi mati pada 17 Agustus 2021.
"Mulai 30 November 2020, aplikasi web Microsoft Teams tidak lagi mendukung IE 11 dan 17 Agustus 2021, aplikasi dan layanan Microsoft 365 yang tersisa tidak akan lagi mendukung IE 11," kata Microsoft.
"Ini berarti bahwa setelah tanggal di atas, pelanggan akan mengalami penurunan pengalaman atau tidak akan dapat terhubung ke aplikasi dan layanan Microsoft 365 di IE 11," lanjut Microsoft.
Internet Explorer 11 adalah versi paling baru dan merupakan yang terakhir dari seri browser ini. Nantinya Internet Explorer 11 akan digantikan oleh Microsoft Edge, browser terbaru Microsoft berbasis software Chromium yang dikembangkan Google untuk Google Chrome.
Karenanya, Microsoft Edge menjanjikan lebih banyak fitur dibandingkan Internet Explorer. Dikutip dari Independent, ada juga versi lama Microsoft Edge yang belum berbasis Chromium. Versi ini juga akan ikut dimatikan mulai 9 Maret 2021.
Penutupan Internet Explorer dan browser non-Chromium Microsoft sebenarnya sudah mulai dilakukan Microsoft sejak beberapa tahun lalu. Internet Explorer 8, 9, dan 10, dihentikan pada tahun 2016.</item>

    </string-array>
    <string-array name="data_photo">
        <item>https://cdn-2.tstatic.net/tribunnews/foto/bank/images/konsultasi-kesehatan-online.jpg</item>
        <item>https://cdn-2.tstatic.net/tribunnews/foto/bank/images/cek-imei-hp1.jpg</item>
        <item>https://cdn-2.tstatic.net/tribunnews/foto/bank/images/berkat-tcl-a8-kini-kamu-bisa-nonton-video-youtube-rame-rame.jpg</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2017/04/11/1bba0a41-dca2-4301-8185-0224543a6fd0_169.jpg</item>
    </string-array>
    <string name="title_activity_detail">ScrollingActivity</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="hore_gmail_com">hore@gmail.com</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="loginsit">Login</string>
    <string name="daftar">Daftar</string>
    <string name="daftarr">Daftar Akun</string>
    <string name="nama">Nama</string>
    <string name="sudah_memiliki_akun">Sudah Memiliki Akun?</string>
</resources>