<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/daftarr"
        android:textSize="50sp" />

    <LinearLayout
        android:padding="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <TextView
          android:textStyle="bold"
          android:text="@string/nama"
          android:textSize="16sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"/>
      <EditText
          android:background="@drawable/form"
          android:layout_width="match_parent"
          android:layout_height="45sp" />
      <TextView
          android:textStyle="bold"
          android:text="@string/email"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"
          android:textSize="16sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <EditText
          android:background="@drawable/form"
          android:hint="@string/hore_gmail_com"
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="45dp" />
      <TextView
          android:textStyle="bold"
          android:text="@string/password"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"
          android:textSize="16sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <EditText
          android:background="@drawable/form"
          android:paddingRight="15dp"
          android:paddingLeft="15dp"
          android:layout_width="match_parent"
          android:layout_height="45dp" />

      <Button
          android:id="@+id/btn_D"
          android:background="@color/black"
          android:layout_marginTop="15dp"
          android:textAllCaps="false"
          android:text="@string/daftar"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <LinearLayout
          android:layout_marginTop="20dp"
          android:gravity="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:text="@string/sudah_memiliki_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/login"
            android:textStyle="bold" />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>