<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="312dp"
                android:layout_height="109dp"
                android:layout_gravity="center"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                android:contentDescription="TODO"
                android:src="@drawable/judul" />

        </LinearLayout>

        <LinearLayout

            android:padding="18dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:background="@drawable/form"
                android:hint="@string/hore_gmail_com"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <EditText
                android:background="@drawable/form"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <RadioButton
                android:textSize="14sp"
                android:text="@string/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/home"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:text="@string/loginsit"
                android:textAllCaps="false" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/daftar"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/daftar"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>